# AdamantArmorAffectionAdventure

./: .gitignore  AndroidManifest.xml  LICENSE.md  License.txt  ReadMe.md  aaaa-engine.pro  bullets.c  bullets.h  camera.c  camera.h  compile.sh  drawmob.c  drawmob.h  game.c  gamemenu.c  gamemenu.h  gamescene.c  intro.c  main.c  mobai.c  mobai.h  mobs.c  narrator.c  particles.c  playcontrol.c  playcontrol.h  render.c  render.h  settings.gradle  sprites.c  vars.c  vars.h  veryblend.c  veryblend.h  wlight.c  wlight.h  wmapgen.c  wmapload.c  wmapload.h  zcore.c  (+13 more)
aaaa/: build.gradle
aaaa-engine-src/: game.c  game.h  mobs.h  narrator.c  narrator.h  render.c  render.h  sprites.h  vars.h  wmapgen.h  zcore.c  zcsound.c  zctables.h  zgui.h  ztypes.h
aaaa/src/main/: AndroidManifest.xml
aaaa/src/main/cpp/: CMakeLists.txt  ru_exlmoto_aaaa_AAAANativeLibProxy.h
aaaa/src/main/cpp/AAAA-Engine/: Android.mk  bullets.c  drawmob.h  intro.c  intro.h  main.c  vars.c  veryblend.c  wlight.h  wmapgen.c  zcsound.c  zctables.c  zctables.h  zeditmode.h  zlext.c  zlext.h  zresm.c  zresm.h  ztypes.h
aaaa/src/main/cpp/AAAA-Engine/zlext/: android_extras.c  android_extras.h
aaaa/src/main/java/org/libsdl/app/: SDLActivity.java
aaaa/src/main/java/ru/exlmoto/aaaa/: AAAAActivity.java  AAAAFilePickerActivity.java  AAAANativeLibProxy.java
aaaa/src/main/jni/: Application.mk
aaaa/src/main/jni/SDL2_mixer-2.0.1/: Android.mk
aaaa/src/main/jni/src/: Android.mk
aaaa/src/main/jni/src/AAAA-Engine/: game.c  gamemenu.h  playcontrol.h  render.h  wlight.c  wmapload.h  zcore.c  zcore.h  zlmath.c
aaaa/src/main/res/layout/: aaaa_launcher.xml
aaaa/src/main/res/values/: strings.xml
assets_obb/AAAA-Data/: DONOTREAD.ME  donothexedit.me  textures.gfx
assets_obb/AAAA-Data/maps/: 00.aaa  01.aaa  02.aaa  03.aaa  04.aaa  05.aaa  06.aaa  07.aaa  08.aaa  09.aaa  10.aaa  11.aaa  14.aaa  20.aaa  23.aaa  24.aaa  25.aaa  26.aaa  27.aaa  28.aaa  29.aaa  30.aaa  31.aaa  32.aaa
docs/: Build_Notes.txt  Clang_Format_Code.txt  Creating_OBB.txt  Creating_OBB_File.txt  Import_to_AS_summary.txt  SDL2_D-Pad_KeyCodes.txt
gradle/wrapper/: gradle-wrapper.properties
images/src/: button_right.xcf  buttons.xcf  cover.xcf  icon_scene.xcf  overlay_controls_source.xcf
jni/: AAAANativeLibProxy.cpp  Android.mk  Application.mk  ru_exlmoto_aaaa_AAAANativeLibProxy.h
jni/SDL2-2.0.5/: Android.mk
jni/SDL2-2.0.5/include/: SDL_config_android.h
jni/src/: AAAA-Engine.pro  Android.mk  CMakeLists.txt
jni/src/AAAA-Engine/: bullets.h  camera.c  camera.h  drawmob.c  game.h  gamemenu.c  gamescene.c  gamescene.h  intro.c  intro.h  main.c  mobai.c  mobai.h  mobs.c  mobs.h  narrator.c  narrator.h  particles.c  particles.h  playcontrol.c  render.c  sprites.c  sprites.h  vars.c  vars.h  veryblend.h  wlight.c  wlight.h  wmapgen.h  wmapload.c  wmapload.h  zcore.c  zcore.h  zcsound.c  zcsound.h  zctables.h  zeditmode.c  zgui.c  zgui.h  zlext.c  (+4 more)
jni/src/AAAA-Engine/zlext/: android_extras.c  android_extras.h
res/layout/: aaaa_dialog_about.xml  aaaa_filepicker.xml  aaaa_filepicker_row.xml  aaaa_launcher.xml
res/values/: dimens.xml  strings.xml
src/org/libsdl/app/: SDLActivity.java
src/ru/exlmoto/aaaa/: AAAAActivity.java  AAAAFilePickerActivity.java  AAAAInputView.java  AAAALauncherActivity.java  AAAAModernInputView.java  AAAANativeGLSurface.java  AAAANativeLibProxy.java  AAAASimpleInputView.java
tools/gfx_unpacker/: unpack_gfx.cpp
